--- a/vite-project/src/package.json
+++ b/vite-project/src/package.json
@@ -15,20 +15,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@chromatic-com/storybook": "^1.4.0",
-    "@storybook/addon-essentials": "^8.1.2",
-    "@storybook/addon-interactions": "^8.1.2",
-    "@storybook/addon-links": "^8.1.2",
-    "@storybook/addon-onboarding": "^8.1.2",
-    "@storybook/blocks": "^8.1.2",
-    "@storybook/react": "^8.1.2",
-    "@storybook/react-vite": "^8.1.2",
-    "@storybook/test": "^8.1.2",
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^15.0.7",
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
+    "@vitejs/plugin-react": "^4.2.1",
     "jsdom": "^24.0.0",
     "prop-types": "^15.8.1",
-    "storybook": "^8.1.2",
     "vitest": "^1.6.0"
   }
 }
